@@ -1,3 +1,9 @@
+2012-09-20  Marek Polacek  <polacek@redhat.com>
+
+	* tree-ssa-threadupdate.c (mark_threaded_blocks): Don't cast XNEWVEC's
+	result.
+	(create_edge_and_update_destination_phis): Likewise.
+
 2012-09-20  Martin Jambor  <mjambor@suse.cz>
 
 	* function.c (push_cfun): Check old current_function_decl matches
